# rules_hugo

./: .cirrus.yml  README.md  WORKSPACE
hugo/: BUILD  rules.bzl
hugo/internal/: github_hugo_theme.bzl  hugo_repositories.bzl  hugo_repository.bzl  hugo_site.bzl  hugo_theme.bzl
site/: BUILD.bazel  config.yaml  site_test.sh
site/content/docs/: chrystl.md  open-source.md
site/content/menu/: index.md
site_complex/: BUILD
site_complex/config/_default/: config.yaml  languages.yaml  params.yaml
site_complex/content/en/: _index.md
site_complex/content/en/contributing/: _index.md  code_of_conduct.md
site_complex/data/menu/: main.yaml
site_simple/: BUILD.bazel  config.yaml  site_test.sh
site_simple/content/: _index.md
site_simple/content/docs/: bazel.md  proto.md
test/basic/: BUILD.bazel  WORKSPACE  _index.md  config.toml
