load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "hugo_theme")

hugo_theme(
    name = "xmin",
    srcs = [
        "@com_github_yihui_hugo_xmin//:files",
    ],
)

hugo_theme(
    name = "docdock",
    srcs = [
        "@com_github_vjeantet_hugo_theme_docdock//:files",
    ],
    
)

hugo_site(
    name = "basic",
    config = "config.toml",
    content = [
        "_index.md",
        "about.md",
    ],
    quiet = False,
    theme = ":xmin",
)
